@@ -2,6 +2,7 @@ package ch.ethz.origo.jerpa.application.perspective.ededb.tables;
 
 import ch.ethz.origo.jerpa.data.tier.FileState;
 import ch.ethz.origo.jerpa.data.tier.pojo.DataFile;
+import ch.ethz.origo.jerpa.data.tier.pojo.Experiment;
 import ch.ethz.origo.juigle.application.ILanguage;
 import ch.ethz.origo.juigle.application.exception.JUIGLELangException;
 import ch.ethz.origo.juigle.application.observers.LanguageObservable;
@@ -211,6 +212,15 @@ public class DataTableModel extends AbstractTableModel implements ILanguage {
      */
     public List<DataRowModel> getData() {
         return data;
+    }
+
+    /**
+     * Getter of Experiment from data model by its position in model.
+     * @param index position
+     * @return experiment
+     */
+    public DataFile getDataFileAtIndex(int index){
+        return data.get(index).getDataFile();
     }
 
     /**
